<resources>
    <string name="texto_universidad_valladolid">Universidad de Valladolid</string>
    <string name="texto_centro_federico_wattenberg">Centro de estudios Vacceos\nFederico Wattenberg</string>
    <string name="texto_boton_regresar">Volver</string>
    <string name="texto_boton_siguiente">Siguiente</string>
    <string name="texto_select_visit_visita_personalizada">Visita personalizada</string>
    <string name="minutos"> min</string>
    <string name="horas"> hora</string>
    <string name="app_name">Pintia Tour</string>
    <string name="texto_boton_arquitectura_visita_personalizada">Arquitectura</string>
    <string name="texto_boton_funerario_visita_personalizada">Funerario</string>
    <string name="texto_boton_militar_visita_personalizada">Militar</string>
    <string name="texto_boton_costumbres_visita_personalizada">Costumbres</string>
    <string name="texto_boton_curiosidades_visita_personalizada">Curiosidades</string>
    <string name="texto_loading_app_pintia_tour">Pintia Tour</string>
    <string name="texto_select_visit_idioma">Idiomas</string>
    <string name="texto_select_visit_visita_express">Visita express 1 hora</string>
    <string name="texto_select_visit_visita_guiada">Visita guiada</string>
    <string name="texto_select_visit_contacto">Contacto</string>
    <string name="texto_ubicacion_pintia">Aqui nos encontramos</string>
    <string name="texto_contacto_mas_info">Para más información y visitas guiadas llame a:</string>
    <string name="texto_contacto_telefono">983 88 12 40</string>
    <string name="web_pintia">https://www.pintiavaccea.es</string>
    <string name="texto_contacto_web_pintia">Visita nuestra web!</string>
    <string name="texto_visita_express">Visita express</string>
    <string name="texto_consejo_girar_movil">Por favor, sitúe su teléfono móvil de forma horizontal para comenzar con la visita</string>
    <string name="texto_duracion_visita_personalizada">Duracion</string>
    <string name="texto_minutos_duracion_visita_personalizada">10</string>
    <string name="texto_tipo_visita_personalizada">Tipo</string>
    <string name="texto_temas_visita_personalizada">Elija uno o varios temas de visita:</string>
    <string name="texto_temas_requeridos">Elija al menos un tema</string>
    <string name="texto_select_user">¿Eres el guía o el visitante?</string>
    <string name="texto_guia">Guía turístico</string>
    <string name="texto_visitante">Visitante</string>
    <string name="texto_lugares_visita_guiada">Por favor elija los lugares</string>
    <string name="edit_text_codigo">Por favor, introduce un código.</string>
    <string name="texto_consejo_usar_lista">Presione en la lista para saltar a otro punto de visita</string>
    <string name="edit_text_codigo_no_valido_eng">Invalid code!</string>
    <string name="texto_inicial_punto_inicial">Bienvenido a Pintia, mi nombre es Ambatus. Es un honor recibirle hoy en esta tierra que guarda las huellas de mis ancestros y así podrá descubrir el alma de mi pueblo.\n\nPintia es mucho más que un yacimiento, es el testimonio de un pueblo que valoraba el coraje, la vida comunitaria y la conexión con la naturaleza.</string>
    <string name="texto_inicial_visita_guiada">¡Todo listo!\n\nAsegúrese de informar a su guía de que ya puede comenzar la visita\n\nDisfrute del recorrido</string>
    <string name="texto_dirijase_punto_punto_siguiente_mapa">Diríjase al punto señalado en el mapa, pulse la imagen para ir a Google Maps</string>
    <string name="texto_nombre_punto_contenido_0">Las Ruedas y el Proyecto Pintia</string>
    <string name="texto_nombre_punto_contenido_1">El muro</string>
    <string name="texto_nombre_punto_contenido_2">El ritual normativo de la cremación</string>
    <string name="texto_nombre_punto_contenido_3">La estatigrafía horizontal de las ruedas</string>
    <string name="texto_nombre_punto_contenido_4">Recuerdo de pintia</string>
    <string name="texto_nombre_punto_contenido_5">Sepulturas</string>
    <string name="texto_nombre_punto_contenido_6">La zanja II de excavación</string>
    <string name="texto_nombre_punto_contenido_7">Un paisaje de estelas funerarias en posición original</string>
    <string name="texto_nombre_punto_contenido_8">Estelas quemadas, escollera y paleocauce</string>
    <string name="texto_nombre_punto_contenido_9">Cementerio también en el siglo XXI</string>
    <string name="texto_nombre_punto_contenido_10">Buitres, animales sagrados y psicompompos</string>
    <string name="texto_nombre_punto_contenido_11">Zoomorfo en perspectica cenital</string>
    <string name="texto_nombre_punto_contenido_12">El señor de la bellota</string>
    <string name="texto_nombre_punto_contenido_13">Estela funeraria de ammia doidena, hija de Caerrus</string>
    <string name="texto_nombre_punto_contenido_14">Topónimo Las Ruedas</string>
    <string name="texto_nombre_punto_contenido_15">Memorial Vacceo</string>
    <string name="texto_nombre_punto_contenido_16">Sashas y zamanis</string>
    <string name="texto_nombre_punto_contenido_17">Monolito a Federico Watternberg y las Placas-Cenotafio</string>
    <string name="texto_nombre_punto_contenido_18">Tintinarbula y pozo de los deseos</string>
    <string name="texto_principal_punto_contenido_0">Pintia fue una de las ciudades vacceas más orientales de la vieja región Vaccea. Su etapa de mayor esplendor se corresponde con la segunda Edad del Hierro, entre el 400 a.C. y el cambio de la Era. El Proyecto Pintia, desarrollado desde el CEVFW de la Universidad de Valladolid, pretende preservar el patrimonio cultural legado por nuestros antepasados en este enclave, con especial atención a una de las zonas más sensibles del mismo: el cementerio de Las Ruedas. Una de las tres parcelas que lo integran, en manos privadas, todavía hoy es arada, con el beneplácito de la Administración.</string>
    <string name="texto_principal_punto_contenido_1">Lo del muro</string>
    <string name="texto_principal_punto_contenido_2">El ritual de la cremación, esto es, del empleo de piras funerarias sobre las que se dispondrían los cadáveres para su purificación y reducción a cenizas mediante la combustión, se desarrolló en un ustrinum común, en el pago próximo de Los Cenizales, a unos trescientos metros al oeste de Las Ruedas. Se calcula que unas veinticuatro generaciones de pintianos vacceos y romanos podrían haber sido enterrados en el cementerio, y que el mismo podría acoger, por tanto, más de cien mil sepulturas. </string>
    <string name="texto_principal_punto_contenido_3">La necrópolis de Las Ruedas, en uso durante seiscientos años, configura un espacio triangular, de unas seis hectáreas de extensión, ampliado en sucesivas aureolas que determinan una estratigrafía horizontal. Pese a su declaración como Bien de Interés Cultural y a las denuncias formuladas, el arado levantó durante veinte años más de medio millar de estelas que fueron arrojadas a una escombrera, finalmente recuperadas y puestas de pie en la superficie del cementerio. Las exhumadas en excavación se discriminan por hallarse situadas sobre una superficie de gravas, en el lugar exacto de su aparición. Unas y otras señalizaban los diferentes grupos de sepulturas del cementerio.</string>
    <string name="texto_principal_punto_contenido_4">No todo el material arqueológico recuperado en las excavaciones tiene un valor museográfico. El volumen de cerámicas fragmentarias resulta muy elevado, por lo que en unión de otro tipo de objetos como las colecciones faunísticas o elementos constructivos, una vez estudiados, han sido depositados en esta “escombrera arqueológica”. Recoger vestigios materiales en superficie en un yacimiento arqueológico, aunque pueda parecer inocuo, es una práctica poco adecuada, ya que altera la imagen cronológica o funcional de las diversas áreas del mismo. Por ello, quien desee llevarse como recuerdo un resto material, aquí tiene la oportunidad de hacerlo sin variar o alterar el registro histórico.</string>
    <string name="texto_principal_punto_contenido_5">Producida la cremación del cadáver, los restos óseos resultantes serían lavados, recogidos en una urna cineraria y trasladados a un hoyo en el cementerio, acompañados de ajuares y ofrendas alimenticias. La variable constitución de unos y otras expresa la condición del individuo y permite la reconstrucción de la estructura social de estas comunidades prerromanas. En las excavaciones desarrolladas en 2007 y 2011 se documentaron estas tres tumbas aristocráticas, correspondientes a las sepulturas 127a, 127b y 128, una niña y dos mujeres adultas, con una concentración de riqueza muy llamativa. Sabemos que las tres murieron sincrónicamente (fin siglo II o inicios del I a.C.) y que fueron objeto de rituales conjuntos, con cremación a pie de tumba (bustum) y desarrollo de banquetes funerarios. </string>
    <string name="texto_principal_punto_contenido_6">En 1985 se ensayan sondeos arqueológicos a la búsqueda de las zonas del cementerio mejor conservadas. De entre las zanjas trazadas, los trabajos se intensifican en la número II (115 x 3 m) y se recuperan 66 tumbas, cuyo estudio representa el primer trabajo sobre cementerios vacceos. A partir del año 2000 se reinician las excavaciones en la necrópolis hasta el presente. En la actualidad se cuenta con más de trescientas tumbas. En el lugar exacto donde las excavaciones arqueológicas nos han proporcionado una sepultura hemos dispuesto una pequeña cartela con información sobre el finado: sexo, cronología, materiales proporcionados y un poema o epigrama funerario alusivo al individuo allí representado. Se pretende restituir una memoria perdida hace siglos, parte sustancial de nuestro legado patrimonial.</string>
    <string name="texto_principal_punto_contenido_7">Más de dos centenares de estelas funerarias han sido documentados en proceso de excavación, habitualmente caídos sobre uno de sus costados. Concluida la intervención se ha procedido a restituirlos de manera enhiesta sobre su lugar de aparición. Obtenemos así una imagen aproximada del paisaje funerario de la necrópolis de Las Ruedas. La concentración de estelas funerarias en esta zona delata la riqueza de los conjuntos aquí exhumados, por lo que podemos afirmar que estamos en una de las áreas más ricas del cementerio, datable entre los siglos II y I a.C. No todas las tumbas dispusieron de tal hito de señalización. El cerro de Pajares, dos kilómetros al sur, tendría la doble condición de punto de vigía y cantera desde donde se traerían estas lanchas de piedra.</string>
    <string name="texto_principal_punto_contenido_8">En 2012 se descubrió en la zona este uno de los límites del cementerio. Las estelas funerarias aparecen aquí con frecuencia termoalteradas en la cara de contacto con el suelo, lo que parece indicar que las mismas fueron abatidas mientras se extendía un incendio por la zona. Esta aparente destrucción, consecuencia de la presencia romana, debió de ocurrir hacia el final del siglo II o inicios del I a.C. Posteriormente algunas de estas estelas caídas sirvieron para construir una escollera que evitara las avenidas del arroyo de La Vega. La tumba-cenotafio 256, datada en la 2ª mitad del siglo I d.C., abrió el hoyo funerario sobre la escollera, una vez que la vegetación había encubierto su presencia.</string>
    <string name="texto_boton_siguiente_eng">Next</string>
</resources>