<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_light"
    tools:context=".RecieveGuidedTourActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_texto_pintia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texto_pintia_tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_loading_app_pintia_tour"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:fontFamily="@font/grandstander_mediana"
            android:layout_marginTop="7dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_imagen_ciervo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_texto_pintia"
        >

        <ImageView
            android:id="@+id/imagen_ciervo_pintia_tour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tint="@color/black"
            android:src="@drawable/imagen_ciervo"
            android:rotation="270"
            android:layout_marginStart="15dp">
        </ImageView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.40"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_imagen_ciervo"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white">

            <EditText
                android:id="@+id/edit_text_codigo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="@null"
                android:gravity="center_vertical|start"
                android:hint="@string/edit_text_codigo"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="text"
                android:fontFamily="@font/grandstander_mediana"
                android:textColorHint="@color/brown_normal" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout_botones_volver_siguiente"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_contenido_principal_guiada"
            android:padding="16dp">


            <Button
                android:id="@+id/boton_regresar_visita_guiada"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_weight="0.8"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Fab.Rounded"
                android:text="@string/texto_boton_regresar"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/grandstander_mediana"
                android:backgroundTint="@color/brown_normal"
                android:singleLine="true">
            </Button>

            <Button
                android:id="@+id/boton_siguiente_visita_guiada"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_marginEnd="30dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Fab.Rounded"
                android:text="@string/texto_boton_siguiente"
                android:textColor="@color/grayish"
                android:textSize="18sp"
                android:fontFamily="@font/grandstander_mediana"
                android:backgroundTint="@color/green_dark"
                android:layout_marginStart="15dp"
                android:singleLine="true">
            </Button>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>