<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuidedTourContentActivity"
    android:background="@color/brown_light">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_texto_pintia_puntos_siguientes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="3"
        >

        <TextView
            android:id="@+id/texto_pintia_tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_loading_app_pintia_tour"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:fontFamily="@font/grandstander_mediana"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="30dp"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:weightSum="2"
            >
            <TextView
                android:id="@+id/texto_visita_express_o_personalizada_punto_siguiente_contenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_select_visit_visita_guiada"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:fontFamily="@font/grandstander_mediana"
                android:layout_weight="1.8"
                android:layout_marginStart="20dp"
                >
            </TextView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/boton_salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/red_darker"
                android:contentDescription="@string/texto_boton_siguiente_eng"
                android:src="@drawable/salida"
                app:fabCustomSize="55dp"
                app:maxImageSize="40dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Fab.Rounded"
                app:tint="@color/grayish">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_contenido_punto_siguiente_contenido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_texto_pintia_puntos_siguientes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.5"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/brown_light">
                    <TextView
                        android:id="@+id/texto_consejo_usar_lista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/texto_consejo_usar_lista"></TextView>

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/linear_layout_checkbox_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">



                        </androidx.appcompat.widget.LinearLayoutCompat>


                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>




        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            app:layout_constraintHeight_percent="0.5"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imagen_contenido_punto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:src="@drawable/img_punto_contenido_1">

            </ImageView>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout_botones_volver_siguiente_punto_siguiente_contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="end"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/texto_principal_punto_siguiente_contenido">





                <Button
                    android:id="@+id/boton_regresar_visita_guiada"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Fab.Rounded"
                    android:text="@string/texto_boton_regresar"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/grandstander_mediana"
                    android:backgroundTint="@color/brown_normal"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="30dp"
                    android:singleLine="true">
                </Button>

                <Button
                    android:id="@+id/boton_siguiente_visita_guiada"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Fab.Rounded"
                    android:text="@string/texto_boton_siguiente"
                    android:textColor="@color/grayish"
                    android:textSize="18sp"
                    android:fontFamily="@font/grandstander_mediana"
                    android:backgroundTint="@color/green_dark"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:singleLine="true">
                </Button>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>